nats-micro/tests/ui/v6_napi_requires_feature.stderr
error: `napi` service generation requires the `napi` feature
 --> tests/ui/v6_napi_requires_feature.rs:4:6
  |
4 | impl Demo {
  |      ^^^^
