nats-micro/tests/ui/v6_napi_requires_feature.rs
use nats_micro::service;

#[service(name = "demo", version = "1.0.0", napi)]
impl Demo {
    #[request]
    async fn ping() {}
}

fn main() {}
